--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "scala_text"]
 	path = scala_text
-	url = https://github.com/scalajp/scala_text.git
+	url = https://github.com/scala-text/scala_text.git
