--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,16 @@ jobs:
     - name: Set up Docker Build
       uses: docker/setup-buildx-action@v1
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v1 
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
       with:
-        username: yyupw
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Get Docker image
       run: docker-compose pull
+      continue-on-error: true
 
     - name: Build Docker image
       run: docker-compose build
