--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.2'
 services:
   scala-text-pdf-compile:
-    image: yyupw/scala-text-pdf:latest
+    image: ghcr.io/scala-text/scala-text-pdf:latest
     build:
       context: .
       dockerfile: ./docker/Dockerfile
       cache_from:
-        - yyupw/scala-text-pdf:latest
+        - ghcr.io/scala-text/scala-text-pdf:latest
     volumes:
       - .:/workdir
       - ~/.sbt:/root/.sbt
