Use Alpine Linux as base image

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,12 @@ jobs:
       continue-on-error: true
 
     - name: Build Docker image
-      run: docker-compose build
+      uses: docker/build-push-action@v3
+      with:
+        file: ./docker/Dockerfile
+        platforms: linux/amd64
+        push: true
+        tags: ghcr.io/scala-text/scala-text-pdf:latest
 
     - name: PDF build
       run: |
