Change Docker base image to Ubuntu

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,35 +1,14 @@
-FROM alpine:3.16
+FROM ubuntu:22.04
 
 LABEL maintainer="YOSHIMRUA Hikaru <yyu [at] mental.poker>"
 
-ENV TEXLIVE_DEPS \
-    xz \
-    tar \
-    fontconfig-dev \
-    zlib-dev \
-    gnupg \
-    musl-dev \
-    alpine-sdk \
-    pkgconfig \
-    gmp-dev
-    
-ENV TEXLIVE_PATH /usr/local/texlive
-
-ENV FONT_DEPS \
-    unzip \
-    fontconfig-dev
-
-ENV FONT_PATH /usr/share/fonts/
-
 ARG TARGETARCH
 
-ENV PANDOC_VERSION 2.18
-ENV PANDOC_DOWNLOAD_URL https://github.com/jgm/pandoc/releases/download/$PANDOC_VERSION/pandoc-$PANDOC_VERSION-linux-$TARGETARCH.tar.gz
-ENV PANDOC_ROOT /usr/local/bin/pandoc
+RUN apt-get update
 
 ENV PERSISTENT_DEPS \
-    openjdk8 \
-    py-pip \
+    openjdk-8-jdk \
+    python3-pip \
     wget \
     make \
     perl \
@@ -39,27 +18,27 @@ ENV PERSISTENT_DEPS \
     git \
     lz4 \
     ca-certificates
-
-
-ENV PATH $TEXLIVE_PATH/bin/x86_64-linux:$TEXLIVE_PATH/bin/x86_64-linuxmusl:/bin:$PATH
-
-RUN apk upgrade --update
-
-# Install basic dependencies
-RUN apk add --no-cache --virtual .persistent-deps $PERSISTENT_DEPS
+RUN apt-get install -y --no-install-recommends $PERSISTENT_DEPS
 
 # Setup fonts
+ENV FONT_PATH /usr/share/fonts/
+ENV FONT_DEPS \
+    unzip \
+    fontconfig
 RUN mkdir -p $FONT_PATH && \
-    apk add --no-cache --virtual .font-deps $FONT_DEPS && \
+    apt-get install -y --no-install-recommends $FONT_DEPS && \
     # Source Code Pro
     wget "https://github.com/adobe-fonts/source-code-pro/releases/download/2.038R-ro%2F1.058R-it%2F1.018R-VAR/OTF-source-code-pro-2.038R-ro-1.058R-it.zip" && \
       unzip OTF-source-code-pro-2.038R-ro-1.058R-it.zip -d source-code-pro && \
       cp source-code-pro/*.otf $FONT_PATH && \
       rm -rf OTF-source-code-pro-2.038R-ro-1.058R-it.zip source-code-pro && \
     fc-cache -f -v && \
-    apk del .font-deps 
+    apt-get remove -y $FONT_DEPS
 
 # Install Pandoc
+ENV PANDOC_VERSION 2.19
+ENV PANDOC_DOWNLOAD_URL https://github.com/jgm/pandoc/releases/download/$PANDOC_VERSION/pandoc-$PANDOC_VERSION-linux-$TARGETARCH.tar.gz
+ENV PANDOC_ROOT /usr/local/bin/pandoc
 RUN wget -qO- "$PANDOC_DOWNLOAD_URL" | tar -xzf - && \
     cp pandoc-$PANDOC_VERSION/bin/pandoc $PANDOC_ROOT && \
     rm -Rf pandoc-$PANDOC_VERSION/
@@ -71,7 +50,12 @@ RUN pip install --upgrade pip && \
     rm requirements.txt
 
 # Install TeXLive
-RUN apk add --no-cache --virtual .texlive-deps $TEXLIVE_DEPS && \
+ARG TEXLIVE_OPTIONS=""
+ENV TEXLIVE_PATH /usr/local/texlive
+ENV TEXLIVE_DEPS \
+    fontconfig \
+    coreutils
+RUN apt-get install -y --no-install-recommends $TEXLIVE_DEPS && \
     mkdir /tmp/install-tl-unx && \
     wget -qO- http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz | \
       tar -xz -C /tmp/install-tl-unx --strip-components=1 && \
@@ -81,15 +65,25 @@ RUN apk add --no-cache --virtual .texlive-deps $TEXLIVE_DEPS && \
       "option_doc 0" \
       "option_src 0" \
       > /tmp/install-tl-unx/texlive.profile && \
-    /tmp/install-tl-unx/install-tl \
-      -profile /tmp/install-tl-unx/texlive.profile && \
-    tlmgr install latexmk collection-luatex collection-langjapanese \
+    if [[ "$TARGETARCH" = "arm64" ]]; then \
+      /tmp/install-tl-unx/install-tl \
+        -profile /tmp/install-tl-unx/texlive.profile \
+        $TEXLIVE_OPTIONS \
+        -force-platform aarch64-linux; \
+    else \
+      /tmp/install-tl-unx/install-tl \
+        -profile /tmp/install-tl-unx/texlive.profile \
+        $TEXLIVE_OPTIONS; \
+    fi
+
+ENV PATH $TEXLIVE_PATH/bin/aarch64-linux:$TEXLIVE_PATH/bin/x86_64-linux:/bin:$PATH
+RUN tlmgr $TEXLIVE_OPTIONS install latexmk collection-luatex collection-langjapanese \
       collection-fontsrecommended filehook type1cm mdframed needspace \
       fncychap everyhook svn-prov letltxmacro zref sourcesanspro \
       cm-unicode sourceserifpro haranoaji && \
     luaotfload-tool -u -vvv && \
     rm -fr /tmp/install-tl-unx && \
-    apk del .texlive-deps
+    apt-get -y clean
 
 VOLUME ["/workdir", "/root/.sbt", "/root/.ivy2"]
 
