--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - uses: coursier/cache-action@v6
+
     - name: Set up Docker Build
       uses: docker/setup-buildx-action@v2
 
