--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -72,7 +72,7 @@ RUN mkdir /tmp/install-tl-unx && \
 ENV PATH $TEXLIVE_PATH/bin/aarch64-linux:$TEXLIVE_PATH/bin/x86_64-linux:/bin:$PATH
 RUN tlmgr $TEXLIVE_OPTIONS install latexmk collection-luatex collection-langjapanese \
       collection-fontsrecommended filehook type1cm mdframed needspace \
-      fncychap everyhook svn-prov letltxmacro zref sourcesanspro \
+      fncychap everyhook svn-prov zref sourcesanspro \
       cm-unicode sourceserifpro haranoaji && \
     luaotfload-tool -u -vvv && \
     rm -fr /tmp/install-tl-unx && \
